wasm/fastq_maximum_read_size_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_1zc5og9a/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/7cdb48f41ee25ac2b2d6dfc56ebe4deaed7bc7d2.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/7cdb48f41ee25ac2b2d6dfc56ebe4deaed7bc7d2.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/498f68b32f8893338ad94322fd1a7658dfa67f27.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/498f68b32f8893338ad94322fd1a7658dfa67f27.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/4c7264dce7e7308c34a8a04e2373b48f77d967ef.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/4c7264dce7e7308c34a8a04e2373b48f77d967ef.json" for subsequent builds)
cache:INFO:  - ok
